Изменена таблица, добавлены ховеры, убрана "литература" с внутренних страниц

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <div class="header__body">
             <!-- у ссылки разные параметры на главной и внутренних -->
             <a class="logo logo_header" href="#" data-goto=".wrapper">
-              <img class="logo__img" src="./img/content/logo-1.svg" alt="logo">
+              <img class="logo__img" src="./img/content/logo-1.svg" alt="Микролакс">
             </a>
             <nav class="menu">
               <!-- у ссылок разные параметры на главной и внутренних -->
@@ -30,7 +30,7 @@
                 <li class="menu__item">
                   <a class="menu__link" href="#category-1" data-goto-header data-goto="#category-1">
                     <figure class="menu__icon-box">
-                      <picture><source srcset="./img/content/art/menu-1.webp" type="image/webp"><img class="menu__icon" src="./img/content/art/menu-1.png" alt="image"></picture>
+                      <picture><source srcset="./img/content/art/menu-1.webp" type="image/webp"><img class="menu__icon" src="./img/content/art/menu-1.png" alt="Режим дня"></picture>
                     </figure>
                     Режим дня
                   </a>
@@ -38,7 +38,7 @@
                 <li class="menu__item">
                   <a class="menu__link" href="#category-2" data-goto-header data-goto="#category-2">
                     <figure class="menu__icon-box">
-                      <picture><source srcset="./img/content/art/menu-2.webp" type="image/webp"><img class="menu__icon" src="./img/content/art/menu-2.png" alt="image"></picture>
+                      <picture><source srcset="./img/content/art/menu-2.webp" type="image/webp"><img class="menu__icon" src="./img/content/art/menu-2.png" alt="Режим питания"></picture>
                     </figure>
                     Режим питания
                   </a>
@@ -46,7 +46,7 @@
                 <li class="menu__item">
                   <a class="menu__link" href="#category-3" data-goto-header data-goto="#category-3">
                     <figure class="menu__icon-box">
-                      <picture><source srcset="./img/content/art/menu-3.webp" type="image/webp"><img class="menu__icon" src="./img/content/art/menu-3.png" alt="image"></picture>
+                      <picture><source srcset="./img/content/art/menu-3.webp" type="image/webp"><img class="menu__icon" src="./img/content/art/menu-3.png" alt="Регулярность стула"></picture>
                     </figure>
                     Регулярность стула
                   </a>
@@ -54,7 +54,7 @@
                 <li class="menu__item">
                   <a class="menu__link" href="#category-4" data-goto-header data-goto="#category-4">
                     <figure class="menu__icon-box">
-                      <picture><source srcset="./img/content/art/menu-4.webp" type="image/webp"><img class="menu__icon" src="./img/content/art/menu-4.png" alt="image"></picture>
+                      <picture><source srcset="./img/content/art/menu-4.webp" type="image/webp"><img class="menu__icon" src="./img/content/art/menu-4.png" alt="Микроклизма"></picture>
                     </figure>
                     Микроклизма
                   </a>
@@ -422,17 +422,18 @@
           </div>
         </section>
       </main>
+
       <footer class="footer">
         <div class="container">
           <div class="info" data-spollers>
             <details class="info__item">
-              <summary class="info__title btn btn_main" data-open-spoller="1">Список литературы</summary>
+              <summary class="info__title btn" data-open-spoller="1">Список литературы</summary>
               <div class="info__inner">
                 <div class="info__content">
                   <ol>
                     <li>
-                      Богданова Н.М. Функциональный запор у детей раннего возраста: причины развития, критерии
-                      диагностики и тактика ведения. Медицинский совет. 2018; (17): 150-155. URL:
+                      Богданова Н.М. Функциональный запор у детей раннего возраста: причины развития,
+                      критерии диагностики и тактика ведения. Медицинский совет. 2018; (17): 150-155. URL:
                       <a
                         href="https://www.med-sovet.pro/jour/article/viewFile/2712/2668"
                         target="_blank"
@@ -443,11 +444,11 @@
                     </li>
                     <li>
                       Хавкин А.И., Файзуллина Р.А., Бельмер С.В., Волынец Г.В., Гурова М.М., Звягин А.А.,
-                      Корниенко Е.А., Новикова В.П., Печкуров Д.В., Приворотский В.Ф., Тяжева А.А., Эрдес С.И.
-                      Диагностика и лечение функциональных запоров у детей (фрагмент Проекта клинических
-                      рекомендаций по диагностике и лечению функциональных заболеваний органов пищеварения у
-                      детей Российского общества детских гастроэнтерологов, гепатологов и нутрициологов) 2020;2:
-                      60-58. URL:
+                      Корниенко Е.А., Новикова В.П., Печкуров Д.В., Приворотский В.Ф., Тяжева А.А., Эрдес
+                      С.И. Диагностика и лечение функциональных запоров у детей (фрагмент Проекта
+                      клинических рекомендаций по диагностике и лечению функциональных заболеваний органов
+                      пищеварения у детей Российского общества детских гастроэнтерологов, гепатологов и
+                      нутрициологов) 2020;2: 60-58. URL:
                       <a
                         href="https://pharmateca.ru/archive/article/38849"
                         target="_blank"
@@ -479,7 +480,7 @@
               <div class="footer__box">
                 <!-- у ссылки разные параметры на главной и внутренних -->
                 <a class="logo logo_footer" href="#" data-goto=".wrapper">
-                  <img class="logo__img" src="./img/content/logo-2.svg" alt="image">
+                  <img class="logo__img" src="./img/content/logo-2.svg" alt="Микролакс">
                 </a>
               </div>
               <div class="footer__box footer__box_menu">
