--- a/article-3.html
+++ b/article-3.html
@@ -180,6 +180,72 @@
                       </a>
                     </div> -->
                   </div>
+                  <div class="article__box">
+                    <div class="table-slider">
+                      <div class="table-slider__items">
+                        <div class="table-slider__item">
+                          <div class="table-2 table-2_small">
+                            <div class="table-2__head">
+                              <div class="table-2__head-cell">
+                                <div class="table-2__title">
+                                  Возраст, <br>
+                                  мес.
+                                </div>
+                              </div>
+                              <div class="table-2__head-cell table-2__head-cell_grid">
+                                <div class="table-2__title">Дневной сон</div>
+                                <div class="table-2__subhead">
+                                  <div class="table-2__subhead-cell">Кол-во снов</div>
+                                  <div class="table-2__subhead-cell">Продолж-ть,час</div>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="table-2__row">
+                              <div class="table-2__cell">0–2</div>
+                              <div class="table-2__cell table-2__cell_col-2 table-2__cell_row">
+                                <div class="table-2__subcell">6 <span>раз</span></div>
+                                <div class="table-2__subcell">по 2,5 <span>часа</span></div>
+                              </div>
+                            </div>
+                            <div class="table-2__row">
+                              <div class="table-2__cell">2–4</div>
+                              <div class="table-2__cell table-2__cell_col-2 table-2__cell_row">
+                                <div class="table-2__subcell">5 <span>раз</span></div>
+                                <div class="table-2__subcell">по 2-2,5 <span>часа</span></div>
+                              </div>
+                            </div>
+                            <div class="table-2__row">
+                              <div class="table-2__cell">4–6</div>
+                              <div class="table-2__cell table-2__cell_col-2 table-2__cell_row">
+                                <div class="table-2__subcell">4-5 <span>раз</span></div>
+                                <div class="table-2__subcell">по 2 <span>часа</span></div>
+                              </div>
+                            </div>
+                            <div class="table-2__row">
+                              <div class="table-2__cell">6–9</div>
+                              <div class="table-2__cell table-2__cell_col-2 table-2__cell_row">
+                                <div class="table-2__subcell">3-4 <span>раза</span></div>
+                                <div class="table-2__subcell">по 1,5-2 <span>часа</span></div>
+                              </div>
+                            </div>
+                            <div class="table-2__row">
+                              <div class="table-2__cell">9–12</div>
+                              <div class="table-2__cell table-2__cell_col-2 table-2__cell_row">
+                                <div class="table-2__subcell">2 <span>раза</span></div>
+                                <div class="table-2__subcell">по 1,5-2 <span>часа</span></div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="table-slider__scrollbar"></div>
+                    </div>
+                    <!-- <div class="article__action">
+                      <a class="btn btn_main" href="./files/check-list.pdf" target="_blank" download>
+                        Скачать PDF чек листа
+                      </a>
+                    </div> -->
+                  </div>
                   <p>
                     <i>
                       Уже в первый месяц жизни малышу нужно привыкать к определенному распорядку дня. Его
